<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_dark">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="false">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

            <FrameLayout
                    android:id="@+id/frameimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/small_margin5"
                    android:background="@drawable/circle_circle">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/ic_account_circle"
                        android:visibility="visible"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAlignment="center"
                android:hint="@string/name"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textStyle="bold"
                android:textSize="40sp"/>


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textAlignment="center"
                android:hint="@string/email"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:hint="@string/status"
                android:maxLength="200"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/normal_text_size"/>
        </LinearLayout>
    </ScrollView>


    <RelativeLayout
            android:id="@+id/rlActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

            <Button
                android:id="@+id/btnSendMessage"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:shadowColor="#E3BFE3"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:foreground="@drawable/custom_button_foreground_8dp"
                android:text="@string/write_message"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>