<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_messages_list_item"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/security_str"
                    android:textColor="@color/text_hint"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/sos_layout"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:id="@+id/SOSindicatorLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/onIndicator_SOS"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/on_indicator_0" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/imageView3"
                        android:layout_toEndOf="@+id/SOSindicatorLayout"
                        android:gravity="center_vertical"
                        android:text="@string/sos_notification"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_action_more"
                        android:tint="@color/white" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:src="@drawable/custom_friends_list_item" />

                <RelativeLayout
                    android:id="@+id/pin_layout"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:id="@+id/PIN_indicatorLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/onIndicator_PIN"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/on_indicator_0" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/imageView4"
                        android:layout_toEndOf="@+id/PIN_indicatorLayout"
                        android:gravity="center_vertical"
                        android:text="@string/pin_my_app"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_action_more"
                        android:tint="@color/white" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_messages_list_item"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/chats_str"
                    android:textColor="@color/text_hint"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/chats_settings_layout"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:id="@+id/CHATS_SETT_indicatorLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/onIndicator_CHATS_SETTINGS"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/on_indicator_0" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/imageView6"
                        android:layout_toEndOf="@+id/CHATS_SETT_indicatorLayout"
                        android:gravity="center_vertical"
                        android:text="@string/chats_settings"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_action_more"
                        android:tint="@color/white" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="visible"
                    android:src="@drawable/custom_friends_list_item" />

                <RelativeLayout
                    android:id="@+id/language_settings_layout"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:id="@+id/LANGUAGE_SETT_indicatorLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/onIndicator_LANGUAGE_SETTINGS"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/on_indicator_0" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/imageView7"
                        android:layout_toEndOf="@+id/LANGUAGE_SETT_indicatorLayout"
                        android:gravity="center_vertical"
                        android:text="@string/language"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_action_more"
                        android:tint="@color/white" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="visible"
                    android:src="@drawable/custom_friends_list_item" />

                <RelativeLayout
                    android:id="@+id/accessibility_settings_layout"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:id="@+id/ACCESSIBILITY_indicatorLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/onIndicator_ACCESSIBILITY"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/on_indicator_0" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/imageView8"
                        android:layout_toEndOf="@+id/ACCESSIBILITY_indicatorLayout"
                        android:gravity="center_vertical"
                        android:text="@string/accessibility_settings"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_action_more"
                        android:tint="@color/white" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_messages_list_item"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/notification"
                    android:textColor="@color/text_hint"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/notification_settings_layout"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:id="@+id/NOTIFICATION_indicatorLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/onIndicator_NOTIFICATION"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_margin="16dp"
                            android:background="@drawable/on_indicator_0" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/imageView9"
                        android:layout_toEndOf="@+id/NOTIFICATION_indicatorLayout"
                        android:gravity="center_vertical"
                        android:text="@string/notification_settings"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_action_more"
                        android:tint="@color/white" />
                </RelativeLayout>




            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>